--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,10 @@
 * {
-  background-color: rgb(120, 120, 120);
+  background-color: rgb(229, 229, 230);
+  font-family: sans-serif;
+}
+
+h1 {
+  padding-top: 30px;
+  text-align: center;
+  color: rgb(39, 39, 39);
 }
