load user profile functionality added

--- a/src/Components/LoginSignup.scss
+++ b/src/Components/LoginSignup.scss
@@ -19,13 +19,6 @@
   font-size: 28px;
 }
 
-// .underline {
-//   width: 61px;
-//   height: 5px;
-//   background: rgb(11, 11, 174);
-//   border-radius: 9px;
-// }
-
 .inputs {
   margin-top: 55px;
   display: flex;
@@ -70,6 +63,7 @@
   color: white;
   background-color: rgb(55, 55, 101);
   border-radius: 9px;
+  border: none;
   cursor: pointer;
 }
 
